--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://narrensingh.github.io/news-homepage",
   "name": "news-homepage",
   "version": "0.1.0",
   "private": true,
